name:                reapply
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://adit.io
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable reapply
  build-depends:       base ==4.6.*, directory ==1.2.0.1, parsec ==3.1.5, strict ==0.3.2
  hs-source-dirs:      src
  main-is: Main.hs
